--- a/Modules/Module 01 - Selectors/fun-with-selectors/styles.css
+++ b/Modules/Module 01 - Selectors/fun-with-selectors/styles.css
@@ -1,5 +1,5 @@
 li {
-    color: magenta;
+    margin: 4px;
 }
 
 .ugly {
@@ -11,9 +11,6 @@ li {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-kobi {
-    color: green;
-}
 
 #id154 {
     border: 4px solid purple;
@@ -22,3 +19,32 @@ kobi {
 * {
     font-style: italic;
 }
+
+.shopping-list li {
+    text-decoration: red underline;
+}
+
+.outer-ul > li {
+    border: 1px solid brown;
+}
+
+.a.b {
+    color: lightgreen;
+}
+
+.inner-ul > .a.b {
+    font-size: 40px;
+}
+
+.inner-ul > .c ~ li {
+    border-left: 3px solid magenta;
+}
+
+.d + li {
+    border-right: 5px solid green;
+}
+
+.special ~ * {
+    color: lime;
+}
+
