background clip text is now cross platform

--- a/Modules/07 - Animations/advanced-graphics/backgrounds.css
+++ b/Modules/07 - Animations/advanced-graphics/backgrounds.css
@@ -181,6 +181,7 @@ div:nth-child(21) .material-icons-outlined {
 
     background-clip: text;
     -webkit-background-clip: text;    
+    -moz-background-clip: text;
 }
 
 div:nth-child(21) .material-icons-outlined:hover {
