--- a/Modules/07 - Animations/advanced-graphics/backgrounds.css
+++ b/Modules/07 - Animations/advanced-graphics/backgrounds.css
@@ -166,7 +166,6 @@ div:nth-child(21) {
     background-color: var(--my-color);
 }
 
-
 div:nth-child(21) .material-icons-outlined {
     font-size: 100px;
     color: rgb(255, 255, 255, 0.3);
@@ -186,4 +185,33 @@ div:nth-child(21) .material-icons-outlined {
 
 div:nth-child(21) .material-icons-outlined:hover {
     background-position: 150% 150%;
+}
+
+div:nth-child(22) {
+    background-color: var(--my-color);
+}
+
+div:nth-child(22) .material-icons-outlined {
+    font-size: 100px;
+    color: rgb(255, 255, 255, 0.3);
+    background-image: linear-gradient(315deg, 
+        rgba(255, 255, 255, 0.0) 35%, 
+        rgba(255, 255, 255, 0.8) 50%, 
+        rgba(255, 255, 255, 0.0) 65%);
+    background-size: 200% 200%;
+    background-repeat: no-repeat;
+    animation: gradient-glow 2s linear infinite;
+
+    background-clip: text;
+    -webkit-background-clip: text;    
+    -moz-background-clip: text;
+}
+
+@keyframes gradient-glow {
+    0% {
+        background-position: -50% -50%;        
+    }
+    100% {
+        background-position: 150% 150%;
+    }
 }
